# 3D-digital-twin

./: .gitignore  README.md  batch_processing.py  chargeur_tif.py  constructeur_modele.py  exportateur_modele.py  gui.py  interactive_windows.py  main.py  model_builder.py  model_exporter.py  pipeline_architecture.md  post_processing.py  processeur_tranches.py  pyproject.toml  rogner_images.py  slice_processor.py  test.ipynb  test_hash.py  tif_loader.py  tif_vers_3d.py  traitement_lot.py
correlation/: ali  ali2.py  alignement.py  recalage_interactif.py
correlation/GOCATOR/: xyz_to_image.py
correlation/MICRO CT/: bounds_detector.py  islation_support.py  main.py  micro_ct_volume.py  tif_loader_raw.py
correlation/MicroCT2/: reconstruct_tensor.py
topology_reconstruction/: reconstruct.py
